Update nav bar on scroll

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -29,8 +29,8 @@
             <img src="assets/img/primary-logo.svg" id="logo" alt="website logo">
             <nav>
                 <ul>
-                    <li class="active">
-                        <a href="#home">Início</a>
+                    <li>
+                        <a class="active" href="#home">Início</a>
                     </li>
                     <li>
                         <a href="#services">Serviços</a>
