--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -30,7 +30,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="active" href="#home">Início</a>
+                        <a href="#home">Início</a>
                     </li>
                     <li>
                         <a href="#services">Serviços</a>
@@ -44,6 +44,11 @@
                 </ul>
             </nav>
             <button class="secondary-button">Agendar consulta</button>
+            <div class="hamb">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
     </header>
     <!-- Header section end -->
