--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="left">
-                <img style="transform: translateY(60px);" src="assets/img/hero-img.png" alt="">
+                <img src="assets/img/hero-img.png" alt="">
             </div>
         </div>
     </main>
