Mobile navigaton bar end

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -53,6 +53,31 @@
     </header>
     <!-- Header section end -->
 
+    <!-- Mobile navigation bar start -->
+    <nav class="mobile-nav">
+        <ul>
+            <li>
+                <a href="">Início</a>
+            </li>
+            <li>
+                <a href="">Serviços</a>
+            </li>
+            <li>
+                <a href="">Sobre</a>
+            </li>
+            <li>
+                <a href="">Depoimentos</a>
+            </li>
+            <button>Agende sua consulta</button>
+        </ul>
+        <div class="social-networks">
+            <img class="icon" src="assets/icons/instagram.svg" alt="">
+            <img class="icon" src="assets/icons/facebook.svg" alt="">
+            <img class="icon" src="assets/icons/youtube.svg" alt="">
+        </div>
+    </nav>
+    <!-- Mobile navigation bar end -->
+
     <!-- Main section start -->
     <main class="main section" id="home">
         <div class="container">
