--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -8,9 +8,45 @@
     <link rel="stylesheet" href="assets/main.css">
     <!-- ====== -->
 
+    <!-- Fonts -->
+    <!-- Poppins -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- ======= -->
+    <!-- ===== -->
+
     <title>Cabel Nyong | Bekzhanov Rasul</title>
 </head>
 <body>
+    <!-- Header section start -->
+    <header>
+        <div class="container">
+            <img src="assets/images/logo.svg" alt="Website icon">
+            <nav>
+                <ul class="nav-links">
+                    <li>
+                        <a href="#about">About me</a>
+                    </li>
+                    <li>
+                        <a href="#sevices">Services</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#testimonials">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="primary-btn">Hire me</button>
+        </div>
+    </header>
+    <!-- Header section end -->
+
     
 </body>
 </html>
