Main page section finished

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -16,7 +16,11 @@
     <!-- ======= -->
     <!-- ===== -->
 
-    <title>Cabel Nyong | Bekzhanov Rasul</title>
+    <!-- Boxicons cdn -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <!-- ============ -->
+
+    <title>Caleb Nyong | Bekzhanov Rasul</title>
 </head>
 <body>
     <!-- Header section start -->
@@ -47,6 +51,37 @@
     </header>
     <!-- Header section end -->
 
-    
+    <!-- Main section start -->
+    <section class="main">
+        <div class="container">
+            <div class="left">
+                <div class="texts">
+                    <p class="paragraph">Hello, I am</p>
+                    <h1 class="title">Caleb Nyong</h1>
+                    <h4 class="caption">UI/UX & Product Designer</h4>
+                    <p class="description">I’m a top online marketer and branding expert, I started my career by lauching the popular metaverse design, in just a few short years, I built the brand to millions of social media followers and websites visitors.</p>
+                </div>
+                <div class="btns">
+                    <button class="primary-btn">Hire me</button>
+                    <a href="assets/docs/Caleb Nyong CV.pdf" download="CV">Download CV <box-icon color="#FCC028" name='download'></box-icon></a>
+                </div>
+            </div>
+            <div class="right">
+                <img src="assets/images/Main page image.png" alt="Main page image">
+            </div>
+            <div class="profile-card">
+                <div class="top">
+                    <img src="assets/images/Profile image.png" alt="Profile image">
+                    <div class="about-profile">
+                        <h2 class="name">Phanny - <span class="location">Nigeria</span></h2>
+                        <p class="date">Sat 28 May 2022</p>
+                    </div>
+                </div>
+                <div class="bottom">
+                    In just a few short years, I built the brand to millions of social media <br> followers and websites visitors.
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
