About section finished

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -83,5 +83,47 @@
             </div>
         </div>
     </section>
+    <!-- Main section end  -->
+
+    <!-- About section start -->
+    <section class="about" id="about">
+        <div class="container">
+            <img src="assets/images/About page image.png" alt="About section image">
+            <div class="content">
+                <div class="texts">
+                    <p class="paragraph">A BIT</p>
+                    <h1>About Me</h1>
+                    <p class="description">I’m a top online marketer and branding expert, I started my career by lauching the popular metaverse design, in just a few short years, I built the brand to millions of social media followers and websites visitors. I also created award-winning online products with millions of dolloars in online sales you want, you never get personalized experiences and they can be upwards of $1000 on hour. </p>
+                </div>
+                <div class="icons">
+                    <div class="icon experience">
+                        <img src="assets/icons/Experience icon.svg" alt="">
+                        <span>
+                            <p>5 years+</p>
+                            <h4>Experience</h4>
+                        </span>
+                    </div>
+                    <div class="icon projects">
+                        <img src="assets/icons/Projects icon.svg" alt="">
+                        <span>
+                            <p>700+</p>
+                            <h4>Projects</h4>
+                        </span>
+                    </div>
+                    <div class="icon customer">
+                        <img src="assets/icons/Customer icon.svg" alt="">
+                        <span>
+                            <p>24/7</p>
+                            <h4>Customer Support</h4>
+                        </span>
+                    </div>
+                </div>
+                <div class="btns">
+                    <button class="primary-btn">Hire me</button>
+                    <a href="assets/docs/Caleb Nyong CV.pdf" download="CV">Download CV <box-icon color="#FCC028" name='download'></box-icon></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
