Services section finished

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -33,7 +33,7 @@
                         <a href="#about">About me</a>
                     </li>
                     <li>
-                        <a href="#sevices">Services</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li>
                         <a href="#portfolio">Portfolio</a>
@@ -121,6 +121,40 @@
                 <div class="btns">
                     <button class="primary-btn">Hire me</button>
                     <a href="assets/docs/Caleb Nyong CV.pdf" download="CV">Download CV <box-icon color="#FCC028" name='download'></box-icon></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About section end -->
+
+    <!-- Services section start -->
+    <section class="services" id="services">
+        <div class="container">
+            <div class="captions">
+                <p class="paragraph">Services</p>
+                <h1>Check My Services</h1>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="assets/images/service 1.png" alt="First service">
+                    <div class="text">
+                        <h3>Landing Page Design</h3>
+                        <p class="description"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Service 2.png" alt="Second service">
+                    <div class="text">
+                        <h3>Mobile App Design</h3>
+                        <p class="description"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Service 3.png" alt="Third servic">
+                    <div class="text">
+                        <h3>Branding</h3>
+                        <p class="description"> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </div>
                 </div>
             </div>
         </div>
