Portfolio section finished

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -159,5 +159,23 @@
             </div>
         </div>
     </section>
+    <!-- Services section end -->
+
+    <!-- Portfolio section start -->
+    <section class="portfolio" id="portfolio">
+        <div class="container">
+            <div class="captions">
+                <p class="paragraph">Portfolio</p>
+                <h1>People Lie Work Don’t</h1>
+            </div>
+            <div class="cards">
+                <img src="assets/images/Project 1.png" alt="">
+                <img src="assets/images/Project 2.png" alt="">
+                <img src="assets/images/Project 3.png" alt="">
+                <img src="assets/images/Project 4.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio section end -->
 </body>
 </html>
