Contact section finished

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -177,5 +177,43 @@
         </div>
     </section>
     <!-- Portfolio section end -->
+
+    <!-- Contact section start -->
+    <div class="contact" id="contact">
+        <div class="container">
+            <div class="left">
+                <div class="top">
+                    <h2>Contact</h2>
+                    <div class="description">We are committed to processing the information in order to <br> contact you and talk about your project.</div> 
+                </div>
+                <div class="bottom">
+                    <span>
+                        <box-icon type='solid' name='envelope' color="#FCC028"></box-icon>
+                        <p class="description">example@teamwebflow.com</p>
+                    </span>
+                    <span>
+                        <box-icon type='solid' name='edit-location' color="#FCC028"></box-icon>
+                        <p class="description">4040 Lekki Summit Suite 402 <br> Lake Manchester City</p>
+                    </span>
+                    <span>
+                        <box-icon name='phone' type='solid' color="#FCC028"></box-icon>
+                        <p class="description">+44 123 777 5401</p>
+                    </span>
+                </div>
+            </div>
+            <div class="right">
+                <div class="inputs">
+                    <input type="text" name="Name" placeholder="Name">
+                    <input type="email" name="Email" placeholder="Email">
+                    <input type="website" name="Website" placeholder="Website">
+                    <textarea name="Message" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                </div>
+                <div>
+                    <button class="primary-btn">Submit</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Contact section end -->
 </body>
 </html>
