--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -39,9 +39,6 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li>
-                        <a href="#testimonials">Testimonials</a>
-                    </li>
-                    <li>
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -215,5 +212,22 @@
         </div>
     </div>
     <!-- Contact section end -->
+
+    <!-- Footer section start -->
+    <footer>
+        <div class="container">
+            <div>
+                <img src="assets/images/Primary logo.png" alt="">
+                <p class="description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum </p>
+            </div>
+            <div>
+                
+            </div>
+        </div>
+    </footer>
+    <!-- Footer section end -->
+
+    <!-- Javascript -->
+    <script src="assets/scripts/app.js"></script>
 </body>
 </html>
