FOOTER SECTION IS FINISHED

--- a/Project-04 (Portfolio Caleb Nyong)/index.html
+++ b/Project-04 (Portfolio Caleb Nyong)/index.html
@@ -216,12 +216,26 @@
     <!-- Footer section start -->
     <footer>
         <div class="container">
-            <div>
+            <div class="about">
                 <img src="assets/images/Primary logo.png" alt="">
                 <p class="description">is simply dummy text of the printing and typesetting industry. Lorem Ipsum </p>
             </div>
-            <div>
-                
+            <div class="menu">
+                <h3>EXPLORE</h3>
+                <p>SUPPORTS</p>
+                <p>ABOUT US</p>
+                <p>BLOG</p>
+            </div>
+            <div class="menu">
+                <h3>LEGAL</h3>
+                <p>TERMS OF USE</p>
+                <p>PRIVACY POLICY</p>
+            </div>
+            <div class="menu">
+                <h3>SOCIALS</h3>
+                <p>TWITTER</p>
+                <p>LINKEDIN</p>
+                <p>INSTAGRAM</p>
             </div>
         </div>
     </footer>
