Header & Home section end

--- a/Project-05 (Travlog)/index.html
+++ b/Project-05 (Travlog)/index.html
@@ -3,9 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- css -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <!-- === -->
+
+    <!-- Website icon -->
+    <link rel="shortcut icon" href="assets/images/website icon.png" type="image/x-icon">
+    <!-- ============ -->
+
+    <!-- Fonts -->
+    <!-- Montserrat -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- ========== -->
+    <!-- ===== -->
+
+    <!-- Icons -->
+    <!-- Font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <!-- ================ -->
+    <!-- ===== -->
+
     <title>Travlog | Bekzhanov Rasul</title>
 </head>
 <body>
+    <!-- Header section start -->
+    <header id="header" class="header">
+        <div class="container">
+            <img src="assets/images/Logo.png" alt="website logo">
+            <nav>
+                <p class="nav-links">Home</p>
+                <p class="nav-links">Discover</p>
+                <p class="nav-link">Special Deals</p>
+                <p class="nav-link">Contact</p>
+            </nav>
+            <div class="btns">
+                <p>Log In</p>
+                <button class="primary-btn">Sign Up</button>
+            </div>
+        </div>
+    </header>
+    <!-- Header section end -->
+
+    <!-- Home section start -->
+    <div class="home">
+        <div class="container">
+            <div class="left">
+                <div>
+                    <button class="box">
+                        <p>Explore the world!</p>
+                        <img src="assets/icons/Work icon.svg" alt="Work icon" class="icon">
+                    </button>
+                </div>
+                <h1>Travel <span>top destination</span> of the world</h1>
+                <p>We always make our customer happy by providing as many choices as possible </p>
+                <div class="btns">
+                    <button class="primary-btn">Get Started</button>
+                    <button class="secondary-btn">
+                        <img src="assets/icons/Play circle icon.svg" alt="Play circle icon" class="icon">
+                        <p>Watch Demo</p>
+                    </button>
+                </div>
+            </div>
+            <div class="right">
+                <img src="assets/images/home page image.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Home section end -->
+
+    <!-- Our clients section start -->
     
+    <!-- Our clients section end -->
 </body>
 </html>
