Header & Home section end

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -12,13 +12,106 @@
     <link rel="website icon" href="assets/images/website-icon.svg">
     <!-- ============ -->
 
+    <!-- Fonts -->
+    <!-- Urbanist -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- ======== -->
+    <!-- ===== -->
+
     <title>Estatein | Bekzhanov Rasul</title>
 </head>
 <body>
+    <!-- Home page start -->
     <div class="home active" id="home">
+        <!-- Header section start -->
         <header>
-            
+            <div class="container">
+                <img src="assets/images/Logo.svg" alt="Website logo">
+                <nav>
+                    <span class="nav-links active">Home</span>
+                    <span class="nav-links">About Us</span>
+                    <span class="nav-links">Properties</span>
+                    <span class="nav-links">Services</span>
+                </nav>
+                <button class="btn solid-dark">Contact Us</button>
+            </div>
         </header>
+        <!-- Header section end -->
+    
+        <!-- Hero section start -->
+        <section class="hero">
+            <div class="container">
+                <div class="hero-left">
+                    <div class="contents">
+                        <h1 class="title">Discover Your Dream Property with Estatein</h1>
+                        <p class="paragraph">Your journey to finding the perfect property begins here. Explore our listings to find the home that matches your dreams.</p>
+                    </div>
+                    <div class="btns">
+                        <button class="btn outlined-btn">Learn More</button>
+                        <button class="btn solid-primary">Browse Properties</button>
+                    </div>
+                    <div class="hero-cards">
+                        <div class="stats-card">
+                            <h4 class="count">200+</h4>
+                            <p class="description">Happy Customers</p>
+                        </div>
+                        <div class="stats-card">
+                            <h4 class="count">10k+</h4>
+                            <p class="description">Properties For Clients</p>
+                        </div>
+                        <div class="stats-card">
+                            <h4 class="count">16+</h4>
+                            <p class="description">Years of Experience</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero-right">
+                    <div class="hero-image">
+                        <div class="img">
+                            <img class="image" src="assets/images/Hero-img.png" alt="">
+                            <img class="bg" src="assets/images/Abstract Design.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Hero section end -->
+
+        <!-- Services card section start -->
+        <section class="services-card">
+            <div class="service-card">
+                <img class="card-icon" src="assets/icons/home-icon.svg" alt="Home icon">
+                <span>Find Your Dream Home</span>
+                <div class="icon">
+                    <img src="assets/icons/arrow-top-right-icon.svg" alt="Arrow icon">
+                </div>
+            </div>
+            <div class="service-card">
+                <img class="card-icon" src="assets/icons/value-icon.svg" alt="Value icon">
+                <span>Unlock Property Value</span>
+                <div class="icon">
+                    <img src="assets/icons/arrow-top-right-icon.svg" alt="Arrow icon">
+                </div>
+            </div>
+            <div class="service-card">
+                <img class="card-icon" src="assets/icons/management-icon.svg" alt="Home icon">
+                <span>Effortless Property Management</span>
+                <div class="icon">
+                    <img src="assets/icons/arrow-top-right-icon.svg" alt="Arrow icon">
+                </div>
+            </div>
+            <div class="service-card">
+                <img class="card-icon" src="assets/icons/sun-icon.svg" alt="Home icon">
+                <span>Smart Investments, Informed Decisions</span>
+                <div class="icon">
+                    <img src="assets/icons/arrow-top-right-icon.svg" alt="Arrow icon">
+                </div>
+            </div>
+        </section>
+        <!-- Services card section end -->
     </div>    
+    <!-- Home page end -->
 </body>
 </html>
