Properties section finished

--- a/Project-06 (Real Estate Business Website)/index.html
+++ b/Project-06 (Real Estate Business Website)/index.html
@@ -111,6 +111,146 @@
             </div>
         </section>
         <!-- Services card section end -->
+
+        <!-- Properties section start -->
+        <section class="properties">
+            <div class="container">
+                <div class="content">
+                    <h1 class="title">Featured Properties</h1>
+                    <div class="box">
+                        <p class="paragraph">Explore our handpicked selection of featured properties. Each listing offers a glimpse into exceptional homes and investments available through Estatein. Click "View Details" for more information.</p>
+                        <button class="btn solid-dark">View All Properties</button>
+                    </div>
+                    <span>
+                        <img src="assets/icons/Stars-icon.svg" alt="">
+                    </span>
+                </div>
+                <div class="slider-cards">
+                    <div class="cards">
+                        <div class="properties-card">
+                            <img src="assets/images/Properties-images/Properties-image-1.png" alt="">
+                            <div class="captions">
+                                <h3 class="card-title">Seaside Serenity Villa</h3>
+                                <p class="paragraph">A stunning 4-bedroom, 3-bathroom villa in a peaceful suburban neighborhood... <span>Read More</span></p>
+                            </div>
+                            <div class="card-details">
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bed-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">4-Bedroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bathroom-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">3-bathroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/apartment-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">Villa</p>
+                                </div>
+                            </div>
+                            <div class="bottom">
+                                <div class="price">
+                                    <p class="paragraph">Price</p>
+                                    <span>$550,000</span>
+                                </div>
+                                <button class="btn solid-primary">View Property Details</button>
+                            </div>
+                        </div>
+                        <div class="properties-card">
+                            <img src="assets/images/Properties-images/Properties-image-2.png" alt="">
+                            <div class="captions">
+                                <h3 class="card-title">Metropolitan Haven</h3>
+                                <p class="paragraph">A chic and fully-furnished 2-bedroom apartment with panoramic city views... <span>Read More</span></p>
+                            </div>
+                            <div class="card-details">
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bed-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">2-Bedroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bathroom-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">2-bathroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/apartment-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">Villa</p>
+                                </div>
+                            </div>
+                            <div class="bottom">
+                                <div class="price">
+                                    <p class="paragraph">Price</p>
+                                    <span>$550,000</span>
+                                </div>
+                                <button class="btn solid-primary">View Property Details</button>
+                            </div>
+                        </div>
+                        <div class="properties-card">
+                            <img src="assets/images/Properties-images/Properties-image-3.png" alt="">
+                            <div class="captions">
+                                <h3 class="card-title">Rustic Retreat Cottage</h3>
+                                <p class="paragraph">An elegant 3-bedroom, 2.5-bathroom townhouse in a gated community... <span>Read More</span></p>
+                            </div>
+                            <div class="card-details">
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bed-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">3-Bedroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/bathroom-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">3-bathroom</p>
+                                </div>
+                                <div class="details">
+                                    <span>
+                                        <img src="assets/icons/apartment-icon.svg" alt="">
+                                    </span>
+                                    <p class="paragraph">Villa</p>
+                                </div>
+                            </div>
+                            <div class="bottom">
+                                <div class="price">
+                                    <p class="paragraph">Price</p>
+                                    <span>$550,000</span>
+                                </div>
+                                <button class="btn solid-primary">View Property Details</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slider-btns">
+                        <p class="card-number">
+                            <span class="current-number">01</span>
+                            <span class="txt">
+                                of
+                                <span class="count">60</span>
+                            </span>
+                        </p>
+                        <div class="btns">
+                            <div class="btn-prev">
+                                <img src="assets/icons/prev-icon.svg" alt="">
+                            </div>
+                            <div class="btn-next active">
+                                <img src="assets/icons/next-icon.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Properties section end -->
     </div>    
     <!-- Home page end -->
 </body>
